fix literal block

--- a/test/own/literal_block.adoc
+++ b/test/own/literal_block.adoc
@@ -1,8 +1,13 @@
  ~/secure/vault/defops
+ dfasdfsdf
+dfasdfsdf
+ dfasdfsdf
 
 [literal]
 error: The requested operation returned error: 1954 Forbidden search for defensive operations manual
 absolutely fatal: operation initiation lost in the dodecahedron of doom
 would you like to die again? y/n
 
-
+....
+literal block
+....
